--- a/app/src/main/res/layout/work_item_list_view.xml
+++ b/app/src/main/res/layout/work_item_list_view.xml
@@ -6,14 +6,14 @@
 
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         />
 
     <TextView
         android:id="@+id/tv_description"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         />
 
 </LinearLayout>
