--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -5,22 +5,24 @@
 
     <TextView
         android:id="@+id/tv_firstName"
-        android:textSize="28sp"
+        android:textSize="22sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_lastName"
-        android:textSize="28sp"
+        android:textSize="22sp"
         android:layout_toRightOf="@+id/tv_firstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/tv_username"
-        android:textSize="28sp"
+        android:textSize="22sp"
+        android:textColor="@color/gray_light"
         android:layout_below="@+id/tv_firstName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10sp"/>
 
 </RelativeLayout>
