--- a/app/src/main/res/layout/work_item_add_view.xml
+++ b/app/src/main/res/layout/work_item_add_view.xml
@@ -2,43 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+                android:layout_margin="4sp">
 
     <TextView
         android:id="@+id/tv_title"
         android:text="@string/title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
 
     <EditText
         android:id="@+id/edit_workitem_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/tv_description"
         android:text="@string/description"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
 
     <EditText
         android:id="@+id/edit_workitem_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
 
     <Button
         android:id="@+id/add_button"
         android:text="@string/add_workitem_button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textColor="@color/background"
+        android:background="@color/primary_orange"
+        android:layout_gravity="right"
+        android:layout_margin="4sp"
+        android:textSize="20sp"/>
+
 </LinearLayout>
