--- a/app/src/main/res/layout/work_item_add_view.xml
+++ b/app/src/main/res/layout/work_item_add_view.xml
@@ -16,20 +16,20 @@
         android:id="@+id/edit_workitem_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="17sp"/>
 
     <TextView
         android:id="@+id/tv_description"
-        android:text="@string/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/description"
         android:textSize="20sp"/>
 
     <EditText
         android:id="@+id/edit_workitem_description"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"/>
+        android:textSize="17sp"/>
 
     <Button
         android:id="@+id/add_button"
