--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,18 @@
         <item name="colorAccent">@color/background</item>
     </style>
 
+    <style name="chart_text">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/primary_gray</item>
+        <item name="android:layout_centerInParent">true</item>
+    </style>
+
+    <style name="chart_title">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/primary_gray</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
 
 </resources>
 
