--- a/app/src/main/res/layout/chart_fragment.xml
+++ b/app/src/main/res/layout/chart_fragment.xml
@@ -1,102 +1,163 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/chart_fragment"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <View
         android:layout_width="wrap_content"
+        android:layout_height="10sp"
+        android:background="@drawable/gradient_line" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="4">
+        android:orientation="horizontal">
 
-        <ProgressBar
-            android:id="@+id/unstarted_items"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminate="false"
-            android:progressDrawable="@drawable/unstarted" />
-
-        <TextView
-            android:id="@+id/tv_unstarted_number"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/primary_gray"
-            android:textSize="14sp" />
+            android:layout_margin="5sp"
+            android:layout_weight="4">
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/unstarted_chart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-    <RelativeLayout
+                <ProgressBar
+                    android:id="@+id/unstarted_items"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:indeterminate="false"
+                    android:progressDrawable="@drawable/unstarted"/>
+
+                <TextView
+                    android:id="@+id/tv_unstarted_number"
+                    style="@style/chart_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_unstarted"
+                style="@style/chart_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/unstarted_chart"
+                android:text="@string/unstarted" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:layout_weight="4">
+
+            <RelativeLayout
+                android:id="@+id/started_chart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/started_items"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:indeterminate="false"
+                    android:progressDrawable="@drawable/started"/>
+
+                <TextView
+                    android:id="@+id/started_items_number"
+                    style="@style/chart_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_started"
+                style="@style/chart_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/started_chart"
+                android:text="@string/started"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:layout_weight="4">
+
+            <RelativeLayout
+                android:id="@+id/done_chart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/done_items"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:indeterminate="false"
+                    android:progressDrawable="@drawable/done" />
+
+                <TextView
+                    android:id="@+id/tv_done_number"
+                    style="@style/chart_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_done"
+                style="@style/chart_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/done_chart"
+                android:text="@string/done" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="5sp"
+            android:layout_weight="4">
+
+            <RelativeLayout
+                android:id="@+id/my_items_chart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/my_items"
+                    style="@android:style/Widget.ProgressBar.Horizontal"
+                    android:layout_width="100sp"
+                    android:layout_height="100sp"
+                    android:indeterminate="false"
+                    android:progressDrawable="@drawable/my_items" />
+
+                <TextView
+                    android:id="@+id/my_items_number"
+                    style="@style/chart_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_my_items"
+                style="@style/chart_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/my_items_chart"
+                android:text="@string/my_items" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <View
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="4">
-
-        <ProgressBar
-            android:id="@+id/started_items"
-            android:progressDrawable="@drawable/started"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminate="false"
-            />
-
-        <TextView
-            android:id="@+id/started_items_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/primary_gray"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_weight="4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <ProgressBar
-            android:id="@+id/done_items"
-            android:progressDrawable="@drawable/done"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminate="false"
-            />
-
-        <TextView
-            android:id="@+id/tv_done_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/primary_gray"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="4">
-
-        <ProgressBar
-            android:id="@+id/my_items"
-            android:progressDrawable="@drawable/my_items"
-            style="@android:style/Widget.ProgressBar.Horizontal"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:indeterminate="false"
-            />
-
-        <TextView
-            android:id="@+id/my_items_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="@color/primary_gray"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
-
+        android:layout_height="10sp"
+        android:background="@drawable/gradient_line" />
 </LinearLayout>
