--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="primary_blue">#5F45FF</color>
     <color name="blue_light">#CFC7FF</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
