--- a/app/src/main/res/layout/team_details_fragment.xml
+++ b/app/src/main/res/layout/team_details_fragment.xml
@@ -43,7 +43,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="true"
                     android:layout_margin="4sp"
                     android:layout_marginBottom="10sp"
                     android:text="@string/users"
