--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -44,6 +44,14 @@
         android:textColor="@color/background"
         android:textSize="44sp"/>
 
+    <com.google.android.gms.common.SignInButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_google_sign_in"
+        android:layout_centerHorizontal="true"
+        />
+
+
     <Button
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
@@ -53,4 +61,7 @@
         android:background="@drawable/common_google_signin_btn_text_light_normal"
         android:text="@string/common_signin_button_text_long"
         android:textColor="@color/common_google_signin_btn_text_light"/>
+
+
+
 </RelativeLayout>
