--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -38,7 +38,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="230sp"
         android:text="@string/slogan"
-        style="@style/chart_text"
+        style="@style/normal_text"
         android:lines="2"
         android:textAlignment="center"
         android:textColor="@color/background"
