--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <item name="colorAccent">@color/background</item>
     </style>
 
-    <style name="chart_text">
+    <style name="normal_text">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/primary_gray</item>
         <item name="android:layout_centerInParent">true</item>
