--- a/app/src/main/res/layout/team_details_fragment.xml
+++ b/app/src/main/res/layout/team_details_fragment.xml
@@ -24,7 +24,7 @@
 
             <TextView
                 android:id="@+id/tv_team_detail_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="10sp"
                 android:textSize="32sp"/>
