--- a/app/src/main/res/layout/activity_team_update.xml
+++ b/app/src/main/res/layout/activity_team_update.xml
@@ -27,4 +27,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/title_new_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/new_teamname"
+        android:textSize="20sp"
+        android:paddingLeft="5dp"
+        android:paddingTop="13dp"/>
+
+    <EditText
+        android:id="@+id/ed_new_team_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/team_create_btn"
+        android:text="@string/create_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
