--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -9,7 +9,8 @@
         android:id="@+id/tv_firstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22sp"/>
+        android:textSize="22sp"
+        android:layout_marginRight="5sp"/>
 
     <TextView
         android:id="@+id/tv_lastName"
@@ -17,6 +18,21 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/tv_firstName"
         android:textSize="22sp"/>
+
+    <TextView
+        android:id="@+id/tv_added"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="4sp"
+        android:text="@string/added"
+        android:textAllCaps="true"
+        android:textColor="@color/primary_orange"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:gravity="right"
+        android:visibility="invisible"
+        android:layout_toEndOf="@+id/tv_lastName"/>
 
     <TextView
         android:id="@+id/tv_username"
