--- a/app/src/main/res/layout/work_item_list_view.xml
+++ b/app/src/main/res/layout/work_item_list_view.xml
@@ -40,7 +40,7 @@
         android:id="@+id/tv_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         style="@style/normal_text"
         android:textSize="12sp"/>
 </LinearLayout>
