--- a/app/src/main/res/layout/activity_add_work_item.xml
+++ b/app/src/main/res/layout/activity_add_work_item.xml
@@ -11,12 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:labelFor="@+id/edit_workitem_title"/>
 
     <EditText
         android:id="@+id/edit_workitem_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:textSize="20sp"/>
 
     <TextView
@@ -24,23 +26,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/description"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:labelFor="@+id/edit_workitem_description"/>
 
     <EditText
         android:id="@+id/edit_workitem_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:textSize="20sp"/>
 
     <Button
         android:id="@+id/add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:layout_margin="4sp"
         android:text="@string/add_workitem_button"
         android:textColor="@color/background"
         android:background="@color/primary_orange"
         android:textSize="20sp"/>
-
 </LinearLayout>
