--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,24 +15,21 @@
             android:id="@+id/et_search_value"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:hint="Enter title here!"
+            android:hint="@string/enter_title_here"
             android:textSize="12sp"
-            android:layout_toLeftOf="@+id/search_btn_search"
-            android:layout_marginLeft="5dp"/>
+            android:layout_toStartOf="@+id/search_btn_search"
+            android:layout_marginStart="5dp"/>
         <Button
             android:id="@+id/search_btn_search"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="Search"
-            android:layout_alignParentRight="true"
+            android:text="@string/search"
+            android:layout_alignParentEnd="true"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"/>
-
-
     </RelativeLayout>
 
     <android.support.constraint.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/workitem_list_search_container"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -40,7 +37,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="se.rejjd.taskmanager.MainActivity"/>
-
-
-
 </android.support.constraint.ConstraintLayout>
