--- a/app/src/main/res/layout/activity_team_update.xml
+++ b/app/src/main/res/layout/activity_team_update.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,18 +13,20 @@
         android:layout_height="wrap_content"
         android:text="@string/teamname"
         android:textSize="20sp"
-        android:paddingLeft="5dp"
+        android:labelFor="@+id/ed_team_update"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:paddingTop="13dp"/>
 
     <EditText
         android:id="@+id/ed_team_update"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="text"/>
 
     <Button
         android:id="@+id/team_update_btn"
         android:text="@string/update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
 </LinearLayout>
