--- a/app/src/main/res/layout/work_item_update_fragment.xml
+++ b/app/src/main/res/layout/work_item_update_fragment.xml
@@ -12,14 +12,18 @@
         android:layout_height="wrap_content"
         android:text="@string/title"
         android:textSize="20sp"
-        android:paddingLeft="5dp"
+        android:labelFor="@+id/ed_update_title"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:paddingTop="13dp"/>
 
     <EditText
         android:id="@+id/ed_update_title"
         android:layout_width="390dp"
         android:layout_height="wrap_content"
-        android:paddingLeft="5dp"/>
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:inputType="text"/>
 
     <TextView
         android:id="@+id/tv_description"
@@ -27,22 +31,27 @@
         android:layout_height="wrap_content"
         android:text="@string/description"
         android:textSize="20sp"
-        android:paddingLeft="11dp"
+        android:labelFor="@+id/ed_update_description"
+        android:paddingStart="11dp"
+        android:paddingEnd="11dp"
         android:paddingTop="10dp"/>
 
     <EditText
         android:id="@+id/ed_update_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="11dp"/>
+        android:paddingStart="11dp"
+        android:paddingEnd="11dp"
+        android:inputType="text"/>
 
     <TextView
         android:id="@+id/tv_workitem_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/workitem_status"
-        android:textSize="20dp"
-        android:paddingLeft="11dp"
+        android:textSize="20sp"
+        android:paddingStart="11dp"
+        android:paddingEnd="11dp"
         android:paddingTop="10dp"/>
 
     <Spinner
@@ -57,7 +66,8 @@
         android:layout_height="wrap_content"
         android:text="@string/workitem_assigned_user"
         android:textSize="20sp"
-        android:paddingLeft="11dp"
+        android:paddingStart="11dp"
+        android:paddingEnd="11dp"
         android:paddingTop="10dp"/>
 
     <Spinner
@@ -71,5 +81,4 @@
         android:text="@string/update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
 </LinearLayout>
